# pyin-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  compile_test.sh
.github/workflows/: release.yml
include/: pyin.h
src/: lib.rs  main.rs  pad.rs  pyin.rs  roll.rs  util.rs  viterbi.rs  windows.rs
test/: test.c
