[package]
authors = ["Sytronik <sytronik210@gmail.com>"]
categories = ["algorithms"]
description = "pYIN pitch detection algorithm written in Rust"
documentation = "https://docs.rs/pyin"
edition = "2021"
exclude = ["/samples", "/include", "/test"]
keywords = ["audio", "pitch", "speech", "voice"]
license = "MIT"
name = "pyin"
repository = "https://github.com/Sytronik/pyin-rs"
version = "1.0.2"

[lib]
crate-type = ["rlib", "cdylib"]
name = "pyin"
path = "src/lib.rs"

[[bin]]
name = "pyin"
path = "src/main.rs"

[dependencies]
approx = "0.5.1"
clap = {version = "3.1.6", features = ["derive"]}
creak = "0.3.0"
getset = "0.1.2"
libc = "0.2.120"
ndarray = {version = "0.15.4", features = ["rayon", "approx-0_5"]}
ndarray-npy = "0.8.1"
ndarray-stats = "0.5.0"
num-traits = "0.2.14"
rayon = "1.5.1"
realfft = "3.0.0"
rustfft = "6.0.1"
statrs = "0.15.0"
