[package]
authors = ["Sytronik <sytronik210@gmail.com>"]
categories = ["algorithms"]
description = "pYIN pitch detection algorithm written in Rust"
documentation = "https://docs.rs/pyin"
edition = "2021"
exclude = ["/include", "/samples", "/test"]
keywords = ["audio", "pitch", "speech", "voice"]
license = "MIT"
name = "pyin"
repository = "https://github.com/Sytronik/pyin-rs"
version = "1.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "pyin"
path = "src/lib.rs"

[[bin]]
name = "pyin"
path = "src/main.rs"

[dependencies]
approx = "0.5.1"
clap = {version = "4.4.11", features = ["derive"]}
creak = "0.3.0"
getset = "0.1.2"
libc = "0.2.151"
ndarray = {version = "0.15.6", features = ["approx-0_5", "rayon"]}
ndarray-npy = "0.8.1"
ndarray-stats = "0.5.1"
rayon = "1.8.0"
realfft = "3.3.0"
statrs = "0.16.0"
