[package]
authors = ["Sytronik <sytronik210@gmail.com>"]
categories = ["algorithms"]
description = "pYIN pitch detection algorithm written in Rust"
documentation = "https://docs.rs/pyin"
edition = "2021"
exclude = ["/include", "/samples", "/test"]
keywords = ["audio", "pitch", "speech", "voice"]
license = "MIT"
name = "pyin"
repository = "https://github.com/Sytronik/pyin-rs"
version = "1.2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "pyin"
path = "src/lib.rs"

[features]
blas = ["blas-src", "ndarray/blas", "openblas-src"]
build-binary = ["clap", "creak", "ndarray/rayon", "rayon"]

[[bin]]
name = "pyin"
path = "src/main.rs"
required-features = ["build-binary"]

[dependencies]
approx = "0.5.1"
blas-src = {version = "0.10.0", features = ["openblas"], optional = true}
clap = {version = "4.5.9", features = ["derive"], optional = true}
creak = {version = "0.3.0", optional = true}
getset = "0.1.2"
libc = "0.2.155"
ndarray = {version = "0.15.6", features = ["approx-0_5"]}
ndarray-npy = "0.8.1"
ndarray-stats = "0.5.1"
rayon = {version = "1.10.0", optional = true}
realfft = "3.3.0"
statrs = "0.17.1"

[target.'cfg(target_os = "windows")'.dependencies]
openblas-src = {version = "0.10.9", features = ["cblas", "static", "system"], optional = true}

[target.'cfg(not(target_os = "windows"))'.dependencies]
openblas-src = {version = "0.10.9", features = ["cache", "cblas", "static"], optional = true}
